--- a/parte-01/pag-cumprimento/estilo.css
+++ b/parte-01/pag-cumprimento/estilo.css
@@ -19,6 +19,11 @@ section {
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.739);
 }
 
+div {
+    text-align: center;
+    padding: 8px;
+}
+
 footer {
     color: white;
     text-align: center;
